A race condition exists between setFCV timeseries downgrade and DDL operations

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2026-05-11
    • 🟩 Routing and Topology
    • None
    • None
    • None
    • None
    • None
    • None

      When a setFCV downgrade operation is called on a sharded cluster with viewless timeseries, there is a potential race condition between the setFCV and concurrent DDL operations.
      The race condition exists between the time when the function collects the list of namespaces and the actual loop which consumes them.

      It is possible for a timeseries collection to be dropped between the two points and be recreated as a view.

      If this is the case, a CommandNotSupportedOnView will be thrown. The exception is not among the expected ones, and so the command fails.

       

            Assignee:
            Marco Bizzarri
            Reporter:
            Marco Bizzarri
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: