SERVER-125850 A race condition exists between setFCV timeseries downgrade and DDL operations (#53025)

GitOrigin-RevId: 4b75737afc2870b20a9748f9a1ce9fbb59b4dc26